# PoliverAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.deployer  GRADIO_BYPASS_AUTH.md  PERFORMANCE_OPTIMIZATION.md  PLATFORMS.md  README.md  db.test.dump.archive  docker-compose.dev.yml  docker-compose.yml  extract_gdpr_articles.py  package.json  poliverai-splash.json  postman_collection.json  preview-lottie.html  pyproject.toml  requirements.dev.txt  requirements.docker.txt  requirements.txt  run_gradio_dev.sh  test-style.css  test_policy.txt  tsconfig.json
.github/workflows/: deploy-on-main.yml
data/: chroma.sqlite3
default/: .dockerignore  .env.example  .gitignore  README.docker.md  demo_article_titles.py  demo_ui_features.py  mypy.ini  pyproject.toml  requirements.docker.txt  ruff.toml  test_balanced_mode.py
docs/: gdpr_reference.md
frontend/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
mono-repo-nx/: .env  .env copy.example  .gitignore copy  DOCUMENTATION.md  ENVIRONMENT.md  README.md  README_PORTING.md  nx.json  package-lock.json  package.json  tailwind.config.js  tsconfig.base.json
mono-repo-nx/patches/react-native-worklets/: CMakeLists.txt  empty.cpp  rnworklets.h
scripts/: README.md  backfill_reports_metadata.py  check_mongo_uri.py  deploy_to_gcp.sh  docker-entrypoint.sh  dump_local_mongo.sh  restore_to_atlas.sh  run_server.sh  swap_owner_ids.py  test_auth_routes.py  update_user_password.py
shared-ui/: package.json
tests/: conftest.py  test_api_endpoints.py  test_comparison.py  test_ingestion.py  test_query.py  test_reporting.py  test_retrieval.py  test_rule_checkers.py  test_scoring.py  test_summary_generator.py  test_verification.py
types/: lottie-react-native.d.ts
(+1813 files in other folders)
