[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "poliverai"
version = "0.1.0"
description = "PoliverAI - Policy Verification Assistant for GDPR compliance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "sirolad" }]
keywords = ["gdpr", "compliance", "policy", "verification", "nlp", "rag"]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "reportlab>=4.2",
  "pdfplumber>=0.11",
  "python-docx>=1.1",
  "beautifulsoup4>=4.12",
  "google-cloud-storage>=2.12",
  "python-socketio>=5.8",
  "sentence-transformers>=3.0,<4.0",
  "transformers>=4.44,<5.0",
]

[project.optional-dependencies]
rag = [
  "numpy>=1.26,<2.0",
  "scikit-learn>=1.5,<2.0",
  "sentence-transformers>=3.0,<4.0",
  "faiss-cpu>=1.8,<2.0",
  "google-cloud-storage>=2.12",
]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
  "httpx>=0.27",
  "pre-commit>=3.8",
  "types-PyYAML>=6.0.12.20240808",
]

[project.scripts]
poliverai = "poliverai.app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/poliverai"]